--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body
 <ol>
 <li><a href="https://microstudio.io/Dheer/tutorialcreateagame/AZKMG9AS/">Blue Boi</a></li>
 <li><a href="https://microstudio.io/Dheer/basketbears/ZDSM44WW/">Basket Bears</a></li>
+<li><a href="https://microstudio.io/Dheer/spikebears/">Spike Bears</a></li>
 </ol>
 
 </body>
