--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-<li><a href="https://microstudio.io/Dheer/tutorialcreateagame/AZKMG9AS/">Blue Boi</a></li>
-<li><a href="https://microstudio.dev/i/Dheer/basketbears/">Basket Bears</a></li>
-<li><a href="https://microstudio.dev/i/Dheer/spikebears/">Spike Bears</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/tutorialcreateagame/">Blue Boi</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/basketbears/">Basket Bears</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/spikebears/">Spike Bears</a></li>
 </ol>
 
 </body>
