--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="https://microstudio.dev/i/SpaceMonk/tutorialcreateagame/">Blue Boi</a></li>
 <li><a href="https://microstudio.dev/i/SpaceMonk/basketbears/">Basket Bears</a></li>
 <li><a href="https://microstudio.dev/i/SpaceMonk/spikebears/">Spike Bears</a></li>
+<li><a href="https://microstudio.io/SpaceMonk/lazycharfield/NF278M7G/">Digital Assignment 2A</a></li>
 </ol>
 
 </body>
