--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body
 <li><a href="https://microstudio.dev/i/SpaceMonk/basketbears/">Basket Bears</a></li>
 <li><a href="https://microstudio.dev/i/SpaceMonk/spikebears/">Spike Bears</a></li>
 <li><a href="https://microstudio.io/SpaceMonk/lazycharfield/NF278M7G/">Digital Assignment 2A</a></li>
+<li><a href="https://spacemonk3.itch.io/the-great-escape?secret=bMUVn98xHXfDRG9QiTo1Iv47zac">Digital Assignment 3A</a></li>
 </ol>
 
 </body>
