--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="https://microstudio.io/SpaceMonk/lazycharfield/NF278M7G/">Digital Assignment 2A</a></li>
 <li>Skipped Digital Assignment 2B</a></li>
 <li><a href="https://spacemonk3.itch.io/the-great-escape?secret=bMUVn98xHXfDRG9QiTo1Iv47zac">Digital Assignment 3A</a></li>
+<li><a href="https://spacemonk3.itch.io/escape?secret=Srz71iar6ppBcj0IH4dRefpPM">Digital Assignment 3B</a></li>
 </ol>
 
 </body>
