--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ body
 
 <ol>
 <li><a href="https://microstudio.dev/i/SpaceMonk/tutorialcreateagame/">Blue Boi</a></li>
-<li><a href="https://microstudio.dev/i/SpaceMonk/basketbears/">Basket Bears</a></li>
-<li><a href="https://microstudio.dev/i/SpaceMonk/spikebears/">Spike Bears</a></li>
-<li><a href="https://microstudio.io/SpaceMonk/lazycharfield/NF278M7G/">Digital Assignment 2A</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/basketbears/">Basket Bears (1A)</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/spikebears/">Spike Bears (1B)</a></li>
+<li><a href="https://microstudio.io/SpaceMonk/lazycharfield/NF278M7G/">Lazy Charfield (2A)</a></li>
 <li>Skipped Digital Assignment 2B</a></li>
-<li><a href="https://spacemonk3.itch.io/the-great-escape?secret=bMUVn98xHXfDRG9QiTo1Iv47zac">The Great Escape v0</a></li>
-<li><a href="https://spacemonk3.itch.io/escape">The Great Escape v1</a></li>
+<li><a href="https://spacemonk3.itch.io/the-great-escape?secret=bMUVn98xHXfDRG9QiTo1Iv47zac">The Great Escape v0 (3A)</a></li>
+<li><a href="https://spacemonk3.itch.io/escape">The Great Escape v1 (3B)</a></li>
 </ol>
 
 </body>
