--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body
 <li>Skipped Digital Assignment 2B</a></li>
 <li><a href="https://spacemonk3.itch.io/the-great-escape?secret=bMUVn98xHXfDRG9QiTo1Iv47zac">The Great Escape v0 (3A)</a></li>
 <li><a href="https://spacemonk3.itch.io/escape">The Great Escape v1 (3B)</a></li>
+<li><a href="https://spacemonk3.itch.io/escape">The Great Escape v1 (3B)</a></li>
+<li>Skipped Digital Assignment 4A</a></li>
+<li><a href="https://microstudio.dev/i/SpaceMonk/rb/">R&B (4B)</a></li>
 </ol>
 
 </body>
